--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "anhskohbo/no-captcha": "^3.5",
+        "google/cloud-vision": "^1.6",
         "guzzlehttp/guzzle": "^7.2",
         "jorenvanhocht/laravel-share": "^4.2",
         "laravel/fortify": "^1.16",
