--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /public/storage
 /storage/*.key
 /vendor
+/config/services.php
 .env
 .env.backup
 .env.production
@@ -19,3 +20,4 @@ yarn-error.log
 /.vscode
 /storage/*.index
 google_credentials.json
+public/uploads/
